# adrt

./: .dir-locals.el  .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  AUTHORS  CITATION.cff  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
adrt/: __init__.py  _wrappers.py  adrt.c  adrt.py  adrt_cdefs.cpp  adrt_cdefs_adrt.hpp  adrt_cdefs_bdrt.hpp  adrt_cdefs_common.hpp  adrt_cdefs_iadrt.hpp  utils.py
adrt/tests/: test_adrt.py
adrtc/: __init__.py  adrtc_cdefs.c  adrtc_cdefs.cpp  adrtc_cdefs_adrt.h  adrtc_cdefs_adrt.hpp  adrtc_cdefs_common.h  adrtc_cdefs_common.hpp
adrtc/tests/: naive_adrt.py  test_adrt.py
docs/: changes.rst  conf.py  develop.contribute.rst  develop.maintain.rst  develop.rst  example.rst  examples.cginverse.md  examples.cginverse.rst  examples.coordinate.md  examples.coordinate.rst  examples.rst  examples.sinogram.md  examples.sinogram.rst  examples.tomography.md  examples.tomography.rst  examples.wave.md  examples.wave.rst  index.rst  install.rst  license.rst  make.sh  quickstart.md  quickstart.rst  reference.basic.rst  reference.core.rst  reference.rst  reference.utils.rst  refs.bib  requirements.txt  transforms.rst
docs/_images/: l1ball.py  l1ball_adrt_full.py  l1ball_adrt_iters.py  l1ball_adrt_quadrants.py  l1ball_bdrt.py  l1ball_bdrt_quadrants.py  l1ball_bdrt_truncate.py  shepp_logan.py  shepp_logan_adrt_sinogram.py  shepp_logan_adrt_stitched.py
docs/code/: iadrt_cg.py
docs/data/: shepp-logan.npz
joss/: paper.bib  paper.md
src/adrt/: __init__.py  _adrt_cdefs.pyi  _wrappers.py  adrt_cdefs.cpp  adrt_cdefs_adrt.hpp  adrt_cdefs_bdrt.hpp  adrt_cdefs_common.cpp  adrt_cdefs_common.hpp  adrt_cdefs_fmg.hpp  adrt_cdefs_iadrt.hpp  adrt_cdefs_interp_adrtcart.hpp  adrt_cdefs_py.cpp  adrt_cdefs_py.hpp  core.py  utils.py
tests/: requirements.txt  test_adrt.py  test_adrt_init.py  test_adrt_iter.py  test_adrt_step.py  test_bdrt.py  test_bdrt_iter.py  test_bdrt_step.py  test_coord_adrt.py  test_coord_adrt_to_cart.py  test_coord_cart_to_adrt.py  test_fmg_inv_step.py  test_iadrt.py  test_iadrt_fmg.py  test_iadrt_fmg_iter.py  test_iadrt_fmg_step.py  test_interp_to_cart.py  test_num_iters.py  test_press_fmg_highpass.py  test_press_fmg_prolongation.py  test_press_fmg_restriction.py  test_requirements.txt  test_stitch_adrt.py  test_threading_enabled.py  test_truncate.py  test_unstitch_adrt.py  test_utils.py
tests/cpp/: test_array_access.cpp  test_clamp.cpp  test_compute_strides.cpp  test_conjunction.cpp  test_consecutive_float.cpp  test_div.cpp  test_get.cpp  test_index_sequence.cpp  test_lerp.cpp  test_main.cpp  test_mul_check.cpp  test_num_iters.cpp  test_optional.cpp  test_shape_product.cpp
tools/: LICENSE_windows.txt  constraints.txt  download_catch2.py  patch_license_windows.ps1  version_consistency.py
