[metadata]
name = adrt
version = 0.1.0
description = Fast approximate discrete Radon transform for NumPy arrays
license = BSD
url = https://github.com/karlotness/adrt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    numpy>=1.17
python_requires = >=3.6, <4
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[bdist_wheel]
py-limited-api = cp36
