[metadata]
name = adrt
version = attr: adrt.__version__
description = Fast approximate discrete Radon transform for NumPy arrays
license = BSD
author = Karl Otness, Donsub Rim
url = https://github.com/karlotness/adrt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    numpy~=1.17
python_requires = ~=3.6
packages = find:
package_dir =
    =src
zip_safe = False

[options.extras_require]
cg = scipy

[options.packages.find]
where = src

[bdist_wheel]
py_limited_api = cp36
