[metadata]
name = adrt
version = attr: adrt.__version__
description = Fast approximate discrete Radon transform for NumPy arrays
license = BSD-3-Clause
license_files = LICENSE.txt
author = Karl Otness, Donsub Rim
url = https://github.com/karlotness/adrt
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation=https://adrt.readthedocs.io
    Bug Tracker=https://github.com/karlotness/adrt/issues
    Source Code=https://github.com/karlotness/adrt
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS

[options]
install_requires =
    numpy~=1.17
python_requires = >=3.6
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[bdist_wheel]
py_limited_api = cp36
